kubernetes/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: lab4
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 80
